<resources>
    <string name="app_name">Warehouse Model</string>
    <string name="title_modeling">Modeling</string>
    <string name="title_products">Products</string>
    <string name="title_customers">Customers</string>
    <string name="title_history">History</string>
    <string name="title_activity_product">Product</string>
    <string name="name">Name</string>
    <string name="personalname">Name</string>
    <string name="days">Days</string>
    <string name="modelinginprogress">Modeling in progress</string>
    <string name="currentquantity">Current quantity</string>
    <string name="minimalquantity">Minimal quantity</string>
    <string name="orderquantity">Order quantity</string>
    <string name="addproduct">Add product</string>
    <string name="addcustomer">Add customer</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="confirmation">Confirmation</string>
    <string name="allfieldsarerequired">All fields are required!</string>
    <string name="done">Done</string>
    <string name="notdone">Not done</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="requests">Requests</string>
    <string name="numberofdays">Number of days</string>
    <string name="minrequest">Minimum request</string>
    <string name="maxrequest">Maximum request</string>
    <string name="percentageoffailedorders">Percentage of failed orders</string>
    <string name="percentageoffailedordersbyproducts">Percentage of failed orders by products</string>
    <string name="selectnumberofdays">Select number of days</string>
    <string name="startmodeling">Start modeling</string>
    <string name="productsaved">Product saved</string>
    <string name="productupdated">Product updated</string>
    <string name="productdeleted">Product deleted</string>
    <string name="customersaved">Customer saved</string>
    <string name="customerupdated">Customer updated</string>
    <string name="customerdeleted">Customer deleted</string>
    <string name="resultdeleted">Result deleted</string>
    <string name="notenoughproducts">Not enough products</string>
    <string name="notenoughcustomers">Not enough customers</string>
    <string name="incnumberofdays">Enter the number of days from 3 to 999</string>
    <string name="increquests">Maximum request should be higher than the minimum</string>
    <string name="simulationerror">Simulation error</string>
    <string name="failedtoloaddata">Failed to load data</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="title_activity_result">Result of modeling</string>
</resources>
